Give the main content section a background color

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,3 +2,7 @@ header, footer {
     border: 2px solid;
     background-color: lightgoldenrodyellow;
 }
+
+main {
+    background-color: lightpink;
+}
